Changes to be committed: new file:   Training_TempCNN_4T_Floods_Charter_Rio_Grande_do_Sul_Mapas_Coordenadas.ipynb

--- a/segmentation2vectorization_RSGISLib.ipynb
+++ b/segmentation2vectorization_RSGISLib.ipynb
@@ -10,7 +10,7 @@
     "# Geoinformática\n",
     "  - Cesar Augusto de Moraes Costa\n",
     "\n",
-    "date: 2024/07/08"
+    "Date: 8 Sep. 2024."
    ]
   },
   {
